Internal resolution via proxy should not apply the automatic filters, i.e. the scope & ownership filters.